src/test/deca/context/invalid/else_if_int.deca
// Description :
// test d'un if then else avec une condition non-booléenne
//
// Résultats :
// Erreur contextuelle
// Ligne 12 : La condition n'est pas un booléen (règle 3.22)

{
  int x = 0;
  if (x == 2) {
    println(x);
  } else if (x){
    println(0);
  } else {
    println(x);
  }
}
